<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_summary_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/weather_summary_border"
    android:padding="@dimen/account_summary_border_width">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/rightway_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:src="@drawable/icon_rightway"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_weather_text_view"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/today_weather"
        app:layout_constraintLeft_toRightOf="@id/rightway_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_summary_text_view"
        style="@style/GreyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/rightway_image_view"
        app:layout_constraintTop_toBottomOf="@id/today_weather_text_view"
        tools:text="Sunny" />

    <TextView
        android:id="@+id/temperature_summary_label"
        style="@style/GreyText"
        android:layout_width="@dimen/summary_label_width"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:paddingBottom="@dimen/default_padding"
        android:gravity="right"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/temperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rightway_image_view" />

    <TextView
        android:id="@+id/temperature_summary_text_view"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:gravity="left"
        android:paddingLeft="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/temperature_summary_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rightway_image_view"
        tools:text="37 C" />

    <TextView
        android:id="@+id/wind_speed_summary_label"
        style="@style/GreyText"
        android:layout_width="@dimen/summary_label_width"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:paddingBottom="@dimen/default_padding"
        android:gravity="right"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/wind_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_summary_label" />

    <TextView
        android:id="@+id/wind_speed_summary_text_view"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:paddingBottom="@dimen/default_padding"
        android:gravity="left"
        android:paddingLeft="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/wind_speed_summary_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_summary_text_view"
        tools:text="15 KPH" />

    <TextView
        android:id="@+id/humidity_summary_label"
        style="@style/GreyText"
        android:layout_width="@dimen/summary_label_width"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:paddingBottom="@dimen/default_padding"
        android:gravity="right"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_summary_label" />

    <TextView
        android:id="@+id/humidity_summary_text_view"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:gravity="left"
        android:paddingLeft="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/wind_speed_summary_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_summary_text_view"
        tools:text="88%" />

    <TextView
        android:id="@+id/pressure_summary_label"
        style="@style/GreyText"
        android:layout_width="@dimen/summary_label_width"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:gravity="right"
        android:paddingBottom="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/pressure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_summary_label" />

    <TextView
        android:id="@+id/pressure_summary_text_view"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:gravity="left"
        android:paddingLeft="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/pressure_summary_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_summary_text_view"
        tools:text="88%" />

</android.support.constraint.ConstraintLayout>